.kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: viz-dados-rio
  namespace: viz-dados-rio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: viz-dados-rio
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: viz-dados-rio
    spec:
      containers:
        - name: viz-dados-rio
          image: gcr.io/PROJECT_ID/IMAGE_NAME:TAG
          ports:
            - containerPort: 80
      restartPolicy: Always
