.kubernetes/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: viz-dados-rio-ingress
  namespace: viz-dados-rio
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
    - hosts:
        - viz-staging.dados.rio
      secretName: viz-dados-rio-tls
  rules:
    - host: viz-staging.dados.rio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: viz-dados-rio
                port:
                  number: 80
